fix: monaco hover card to overlap between both code editors

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -6,3 +6,7 @@ html,
 body {
   @apply bg-gray-950;
 }
+
+.monaco-hover {
+  position: fixed !important;
+}
